<resources>
    <string name="app_name">Simple Invoice</string>
    <string name="fullname">Fullname</string>
    <string name="home">Home</string>
    <string name="invoice">Invoice</string>
    <string name="estimate">Estimate</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="aboutus">About Us</string>
    <string name="delete">Delete</string>
    <string name="downloadpdf">Download Pdf</string>
    <string name="action_emailinvoice">Email Invoice</string>
    <string name="action_emailestimate">Email Estimate</string>
    <string name="convertinvoice">Convert to Invoice</string>
</resources>
