<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_invoice"
            android:title="@string/invoice" />
        <item
            android:id="@+id/nav_estimate"
            android:icon="@drawable/ic_estimate"
            android:title="@string/estimate" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_items"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_about"
            android:title="@string/aboutus" />
    </group>
    </menu>
