<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_emailEstimate"
        android:title="@string/action_emailestimate"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_downloadPdf"
        android:title="@string/downloadpdf"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_convertInvoice"
        android:title="@string/convertinvoice"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
